fix/pong-togerher/frontend#3: z-index 디테일 수정

--- a/static/css/select/select.css
+++ b/static/css/select/select.css
@@ -86,10 +86,11 @@ button:hover {
 	display: none;
 	position: fixed;
 	transform: translate(-20%, 100%);
-	z-index: 2;
+	z-index: 5;
 	overflow: auto;
 	background-color: #fdffa5;
 	width: 226px;
+	font-size: 24px;
 	color: black;
 	background: rgba(253, 255, 165, 0.8);
 	border-radius: 20px 0px 20px 20px;
